# TheatreScript

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: theatre_script.hh
include/theatre/: lexer.hh  parser.hh  types.hh  utils.hh
sources/: main.cc  types.hh
src/: lexer.cc  parser.cc  types.cc  utils.cc  vm.cc
tests/: test_compiler_tasm.cc  test_lexer.cc  test_parser.cc  test_vm.cc  tests.cc
